<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4D54BA61"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.login.phone.InputPhoneFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_10sdp"
        android:background="@drawable/background_liner_phone"
        app:layout_constraintHeight_percent=".75"
        android:paddingTop="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp">


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/tizimga_kirish"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:paddingVertical="@dimen/_10sdp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/iltimos_tizimga_kirish_yoki_ro_yhatdan_o_tish_uchun_telefon_raqamingizni_kiriting"
            android:layout_height="wrap_content"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"/>

        <TextView
            android:layout_width="match_parent"
            android:text="@string/telefon_raqamingiz"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_height="wrap_content"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPhoneNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"

            app:boxStrokeColor="@color/primaryDark"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="false"
            android:layout_marginTop="@dimen/_5sdp"
            app:hintEnabled="false"
            app:boxBackgroundColor="#1AC7F4CD"
            app:prefixText="+998"
            app:startIconDrawable="@drawable/ic_unfill_phone"
            app:startIconTint="@color/primaryDark">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edt_input_phone"
                android:inputType="phone"
                android:hint="@string/telefon"
                android:imeOptions="actionDone"

                android:digits="0123456789+"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonContinue"
            android:layout_width="match_parent"
            android:text="@string/davom_etish"
            app:cornerRadius="@dimen/_12sdp"
            app:icon="@drawable/ic_arrow"
            app:iconGravity="end"
            app:iconSize="@dimen/_20sdp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:backgroundTint="@color/primaryDark"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingVertical="@dimen/_12sdp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>