<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.filldata.fillperson.FillPersonFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingTop="@dimen/_15sdp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Shaxsiy ma'lumotlar"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#000"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_7sdp"
            android:text="O'zingiz haqingizdagi ma'lumotlarni kiriting"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_20sdp"
            android:text="Ism"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:boxBackgroundColor="#fff"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintVertical_bias=".7"
            app:startIconDrawable="@drawable/ic_profile"
            app:startIconTint="#B6B6B6">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input"
                android:maxLength="30"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_15sdp"
            android:text="Familya"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_surname_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:boxBackgroundColor="#fff"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintVertical_bias=".7"
            app:startIconDrawable="@drawable/ic_profile"
            app:startIconTint="#B6B6B6">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input"
                android:maxLength="30"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_15sdp"
            android:text="@string/birthday"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_birth_day_et"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            app:boxBackgroundColor="#fff"
            app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
            app:boxCornerRadiusBottomStart="@dimen/_10sdp"
            app:boxCornerRadiusTopEnd="@dimen/_10sdp"
            app:boxCornerRadiusTopStart="@dimen/_10sdp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintVertical_bias=".7"
            app:startIconDrawable="@drawable/ic_calender"
            app:startIconTint="#B6B6B6">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_birth_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/_10_10_2024"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_15sdp"
            android:text="@string/jinsingiz"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_10sdp"
            android:baselineAligned="false">

            <RelativeLayout
                android:id="@+id/select_man_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/shape_radio_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_5sdp">

                <RadioButton
                    android:id="@+id/select_man_radio"
                    android:layout_width="wrap_content"
                    android:checked="true"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    app:useMaterialThemeColors="false" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/select_women_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/shape_radio_button"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_5sdp">

                <RadioButton
                    android:id="@+id/select_women_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    app:useMaterialThemeColors="false" />

            </RelativeLayout>


        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            app:backgroundTint="@color/primaryDark"
            app:fabSize="auto"
            app:tint="#fff"
            android:layout_gravity="end"
            android:id="@+id/next_detail_car_fbn"
            android:src="@drawable/ic_arrow" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>